[tool.poetry]
name = "poliserver"
version = "0.1.0"
description = ""
authors = ["Vadym Sorokin <nicourrrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
